# awrust-s3

./: .dockerignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/awrust-s3-domain/: Cargo.toml
crates/awrust-s3-domain/src/: chunked.rs  error.rs  fs_store.rs  lib.rs  memory_store.rs  store.rs  types.rs  util.rs
crates/awrust-s3-domain/tests/: memory_store.rs
crates/awrust-s3-server/: Cargo.toml
crates/awrust-s3-server/src/: error.rs  handlers.rs  main.rs  router.rs  store.rs  tracing_init.rs  vhost.rs  xml.rs
crates/awrust-s3-server/src/handlers/: bucket.rs  format.rs  mod.rs  object.rs
docker/: Dockerfile
docs/: ARCHITECTURE.md  USAGE.md
docs/adr/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  README.md
tests/integration/: environment.py
tests/integration/features/: aws_chunked.feature  batch_delete.feature  bucket.feature  copy_object.feature  cors.feature  delimiter.feature  list_uploads.feature  multipart.feature  object.feature  pagination.feature  presigned.feature  range.feature  tagging.feature  versions.feature  vhost.feature
tests/integration/steps/: aws_chunked_steps.py  batch_delete_steps.py  bucket_steps.py  copy_steps.py  cors_steps.py  delimiter_steps.py  list_uploads_steps.py  multipart_steps.py  object_steps.py  pagination_steps.py  presigned_steps.py  range_steps.py  tagging_steps.py  version_steps.py  vhost_steps.py
