[package]
name = "awrust-s3-server"
version = "0.1.0"
edition = "2024"

[dependencies]
awrust-s3-domain = { path = "../awrust-s3-domain" }
axum = "0.7"
bytes = "1"
md-5 = "0.10"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
